# market-sentiment-analysis

./: .env.example  .gitignore  DEMO.md  Makefile  README.md  conftest.py  prompt.txt  pyproject.toml  pytest.ini  requirements.txt
.claude/: settings.local.json
.omc/: project-memory.json
.omc/plans/: architect-review-v1.md  architect-review-v2.md  critic-review-v1.md  critic-review-v2.md  map-rework.md  open-questions.md  ralplan-persona-sentiment-v1.md  ralplan-persona-sentiment-v2.md  simulate-mode.md  ui-persona-terminal-rework.md
.omc/sessions/: 225de668-d267-4f2c-ac37-0366ff13da81.json  298112ff-dab8-4d33-9861-04f0d2e4c2dc.json  2a507f22-3c6e-44b1-9ae2-4f0648ef205c.json  3cd7a0b9-433c-4293-84d4-b9830e33d445.json  e20cfbf4-e515-4597-8863-4dbe04a0daa4.json
.omc/specs/: deep-interview-persona-sentiment.md
.omc/state/: agent-replay-1002c5ef-0ad4-4408-9a3b-2bc24aad8851.jsonl  (+5 more)
data/: ablation_results.json  acs_strata.csv  graph_diagnostics.json  sentinel_diagnostics.json  sentinel_results.json  social_graph.json  ticker_aliases.json
docs/: architecture.md  runbook.md
reports/: ablation_poster.md  methodology.md  pitch_talking_points.md
scripts/: __init__.py  build_region_geojson.py  check_bedrock.py  dev.sh  generate_reports.py  region_mapping.py  run_a2.py  run_ablation.py  run_api.sh  run_full_pipeline.py  run_sentinel.py  run_yfinance_ingest.py  sync_ui_data.py
src/: __init__.py  config.py
tests/: __init__.py  conftest.py
ui/: next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
(+121 files in other folders)
