[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "persona-sentiment"
version = "0.1.0"
description = "LLM Persona Market Sentiment Simulator (Hook'em Hacks 2026)"
requires-python = ">=3.11"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: integration tests (may hit live-APIs — mocked by default)",
    "e2e: end-to-end pipeline tests with synthetic data",
    "bedrock: tests that require a real AWS Bedrock call (opt-in only)",
]
filterwarnings = [
    "ignore::DeprecationWarning:botocore.*",
    "ignore::UserWarning:statsmodels.*",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".venv", "node_modules", "ui", ".omc", "data"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "PLE"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
check_untyped_defs = true
exclude = ["ui/", "\\.venv/", "data/"]
